--- a/index.html
+++ b/index.html
@@ -181,6 +181,40 @@
   </div>
 </template>
 
+<script>
+	var fireballSize = 22;
+	var getFireballSpeed = function(left){
+		if (left)
+		{
+			return 5;
+		} else {
+			return 2;
+		}
+	}
+	var wizardSpeed = 3;
+	var wizardWidth = 70;
+	var getWizardHeight = function()
+	{
+		wizardWidthHeight = 1.337*wizardWidth;
+		return wizardWidthHeight;
+	}
+	var getWizardX = function(width)
+	{
+		wizardPositionX = (width/2) - (wizardWidth/2);
+		return wizardPositionX;
+	}
+	var getWizardY = function(height)
+	{
+		wizardPositionY = height - (height*(2/3)) - (getWizardHeight()/2)
+		return wizardPositionY;
+		/*
+			берем 2/3 от высоты
+			вычитаем из этого значения половину высоты мага, чтобы его центральная точка по вертикали находилась в значении 2/3 от значения высоты
+			отсчет начинается слева сверху, поэтому от верха нужное значение - не 2/3 от высоты, а 1/3 или значение высоты минус 2/3 от этой высоты
+		*/
+	}	
+</script>
+
 <script src="js/game.js"></script>
 
 </body>
