--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			return wizardPositionY;
 		}	
 	</script>
-
+	<script src="js/stat.js"></script>
 	<script src="js/game.js"></script>
 
 </body>
